Added Internationalization, Swagger, HATEOAS, Actuator

--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-logging.level.org.springframework=info
+logging.level.org.springframework.web=trace
 #to change Json date from timestamp format to to date format (now is auto enabled)
 spring.jackson.serialization.write-dates-as-timestamps=false
+#set internationalization file name
+spring.message.basename=messages
+
+#actuator endpoint enabling
+management.endpoints.web.exposure.include=*
