--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.message.basename=messages
 
 #actuator endpoint enabling
 management.endpoints.web.exposure.include=*
+
+#setting static user and password
+spring.security.user.name=username
+spring.security.user.password=password
+
+#h2 database static url (if not present db name is randomly generated)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
+
+#h2 database
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
